# internal/core/user/infrastructure/repository/postgres/query.go
@@ -9,6 +9,7 @@ var sqlColumnByDomainField = map[string]string{
 	"firstName": "first_name",
 	"lastName":  "last_name",
 	"origin":    "origin",
+	"picture":   "picture",
 	"createdAt": "created_at",
 	"createdBy": "created_by",
 	"updatedAt": "updated_at",
@@ -18,11 +19,12 @@ var sqlColumnByDomainField = map[string]string{
 }
 
 var (
-	insertQuery     = sqlcraft.InsertInto(table).WithColumns("id", "first_name", "last_name", "origin", "created_at", "created_by")
-	updateQuery     = sqlcraft.Update(table).WithColumns("first_name", "last_name", "origin", "updated_at", "updated_by").SQLColumnByDomainField(sqlColumnByDomainField).WithPartialUpdate()
+	insertQuery     = sqlcraft.InsertInto(table).WithColumns("id", "first_name", "last_name", "origin", "picture", "created_at", "created_by")
+	updateQuery     = sqlcraft.Update(table).WithColumns("first_name", "last_name", "origin", "picture", "updated_at", "updated_by").SQLColumnByDomainField(sqlColumnByDomainField).WithPartialUpdate()
 	softDeleteQuery = sqlcraft.Update(table).WithColumns("deleted_at", "deleted_by").SQLColumnByDomainField(sqlColumnByDomainField).WithPartialUpdate()
 	deleteQuery     = sqlcraft.DeleteFrom(table).SQLColumnByDomainField(sqlColumnByDomainField)
-	selectQuery     = sqlcraft.Select("id", "first_name", "last_name", "origin", "created_at", "created_by", "updated_at", "updated_by", "deleted_at", "deleted_by").From(table).SQLColumnByDomainField(sqlColumnByDomainField)
 	existsQuery     = sqlcraft.Select("1").From(table).SQLColumnByDomainField(sqlColumnByDomainField)
 	countQuery      = sqlcraft.Select("COUNT(*)").From(table).SQLColumnByDomainField(sqlColumnByDomainField)
 )
+
+var selectAllColumns = []string{"id", "first_name", "last_name", "origin", "picture", "created_at", "created_by", "updated_at", "updated_by", "deleted_at", "deleted_by"}
